Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32862

Unconstrained Image given an @2x source has incorrect width/height

XMLWordPrintable

    • 63fb30eb29c26cd7ba0d9133610acb85cad83775

      When setting as the source of an Image a PNG for which only exists a high dpi version (@2x suffix), Image.width and Image.height should be set to the width/height of the PNG divided by the devicePixelRatio set on the QImage backing the Image.

      Edit: In addition, the correct image should be (re)loaded on screen changes if the scale factor changes.

        1. icon@2x.png
          3 kB
          Florian Boucault
        2. image2x.qml
          0.2 kB
          Florian Boucault
        For Gerrit Dashboard: QTBUG-32862
        # Subject Branch Project Status CR V

            sorvig Morten Sørvig
            kaleo Florian Boucault
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes